# mp-face-stylizer

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml
models/: face_stylizer_color_ink.task  face_stylizer_oil_painting.task
mp_face_stylizer/: main.py  sdk.py
tests/: conftest.py  test_sdk.py
