[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mp-face-stylizer"
version = "0.0.2"
authors = [
  { name="Yunfeng Wang", email="wyf.brz@gmail.com" },
]
description = "A cli program of face stylizer based on MediaPipe"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"mediapipe",
"opencv-python",
"numpy",
"tqdm",
]

[project.scripts]
mp_face_stylizer="mp_face_stylizer.main:cli"

[project.urls]
"Homepage" = "https://github.com/vra/mp-face-stylizer"
"Bug Tracker" = "https://github.com/vra/mp-face-stylizer/issues"

[project.optional-dependencies]
lint = [
"black",
"ruff",
]

test = [
"pytest",
]
